@@ -22,9 +22,9 @@ lv_job2x = 1
 lv_job2t = 1
 lv_job3 = 1
 gold = 0
-x = 4.5
+x = 10.5
 y = 2.5
-dir = 3
+dir = 6
 
 [status]
 str = 8
@@ -51,7 +51,7 @@ right = 0
 left = 0
 shoes = 0
 socks = 0
-pet = 0
+pet = 4
 
 [equip_dem]
 head = 0
@@ -67,15 +67,15 @@ socks = 0
 pet = 0
 
 [sort]
-item = 3,4,2,5,1
+item = 3,2,5,1,4
 warehouse = 
 
 [item]
-1 = {s7 item_id: i60107702, s5 count: i1, s9 warehouse: i0, s7 pict_id: i60107702}
-2 = {s7 item_id: i10133600, s5 count: i1, s9 warehouse: i0, s7 pict_id: i0}
-3 = {s7 item_id: i10020114, s5 count: i1, s9 warehouse: i0, s7 pict_id: i0}
-4 = {s7 item_id: i10055500, s5 count: i1, s9 warehouse: i0, s7 pict_id: i0}
-5 = {s7 item_id: i60143203, s5 count: i1, s9 warehouse: i0, s7 pict_id: i60143203}
+1 = {s7 item_id: i60107702, s5 count: i1}
+2 = {s7 item_id: i10133600, s5 count: i1}
+3 = {s7 item_id: i10020114, s5 count: i1}
+4 = {s7 item_id: i10017900, s5 count: i1, s13 pet_weapon_id: i65005000, s11 pet_pict_id: i10260087}
+5 = {s7 item_id: i60143203, s5 count: i1}
 
 [warehouse]
 
